Fix: Make report resolve and delete buttons visible to all users

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Trackon",
-  "name": "Trackon",
+  "name": "Trackon - Road Damage Detection System",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#dc3545",
   "background_color": "#ffffff"
 }
